force-app/main/default/objects/TFR_Labour_Effect__c/TFR_Labour_Effect__c.object-meta.xml
<CustomObject>
    <label>TFR Labour Effect</label>
    <nameField>
        <displayFormat>TFREL-{000000}</displayFormat>
        <label>TFR Labour Effect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TFR Labour Effects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>