force-app/main/default/objects/TFR_Labour_Effect__c/fields/Code_Set__c.field-meta.xml
<CustomField>
    <fullName>Code_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Set</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>TFR Labour Effects</relationshipLabel>
    <relationshipName>TFR_Labour_Effects</relationshipName>
    <type>Lookup</type>
</CustomField>