force-app/main/default/objects/TFR_Labour_Effect__c/fields/Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Failure Code</label>
    <referenceTo>Failure_Code__c</referenceTo>
    <relationshipLabel>TFR Labour Effects</relationshipLabel>
    <relationshipName>TFR_Labour_Effects</relationshipName>
    <type>Lookup</type>
</CustomField>