force-app/main/default/objects/TFR_Labour_Effect__c/fields/Labour_Code__c.field-meta.xml
<CustomField>
    <fullName>Labour_Code__c</fullName>
    <formula>Code_Set__r.Code</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour Code</label>
    <type>Text</type>
</CustomField>