force-app/main/default/objects/TFR_Labour_Effect__c/fields/TFR__c.field-meta.xml
<CustomField>
    <fullName>TFR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VIN Cut off</label>
    <referenceTo>TFR__c</referenceTo>
    <relationshipLabel>TFR Labour Effects</relationshipLabel>
    <relationshipName>TFR_Labour_Effects</relationshipName>
    <type>Lookup</type>
</CustomField>