force-app/main/default/objects/TFR_Labour_Effect__c/fields/VIN_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>VIN_Cut_off__c</fullName>
    <formula>TFR__r.VIN_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Cut off</label>
    <type>Text</type>
</CustomField>