force-app/main/default/objects/TFR_Labour_Effect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Set__c</columns>
    <columns>Failure_Code__c</columns>
    <columns>Labour_Code__c</columns>
    <columns>Active__c</columns>
    <columns>TFR__c</columns>
    <columns>VIN_Cut_off__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>